go/threat/utils/search/parser/grammar_parser.go
// Code generated from Grammar.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // Grammar

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'created_date'", "'severity'", "'status'", "'category'", "'vulnerability'",
	"'malware'", "'impersonate'", "'phishing'", "'impersonate_social'", "'targeted_vulnerability'",
	"'open_port_anomaly'", "'compromised_system'", "'deface_attack'", "'leak'",
	"'feature'", "'brand_abuse'", "'data_leakage'", "'('", "')'", "", "", "",
	"'AND'", "'OR'", "", "'true'", "'false'", "", "'private'", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "'NULL'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "Number", "STRING_VALUE", "Logic", "AND", "OR", "Boolean", "TRUE",
	"FALSE", "Whitespace", "Fields_boolean", "Fields_string", "Fields_number",
	"OperatorContain", "OperatorEqual", "OperatorNumber", "Function", "Term",
	"In", "Notin", "InContain", "NotinContain", "InIp", "NotinIp", "Severity",
	"Status", "ValueIpString", "Ip_string", "Ip_byte", "Ip_value", "Array",
	"ArrayString", "ArrayIpString", "Literal", "NullValue",
}

var ruleNames = []string{
	"prog", "compareNumber", "compareString", "compareDate", "compareBoolean",
	"compareSeverity", "compareStatus", "compareCategory", "compareFeature",
	"expression",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type GrammarParser struct {
	*antlr.BaseParser
}

func NewGrammarParser(input antlr.TokenStream) *GrammarParser {
	this := new(GrammarParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Grammar.g4"

	return this
}

// GrammarParser tokens.
const (
	GrammarParserEOF             = antlr.TokenEOF
	GrammarParserT__0            = 1
	GrammarParserT__1            = 2
	GrammarParserT__2            = 3
	GrammarParserT__3            = 4
	GrammarParserT__4            = 5
	GrammarParserT__5            = 6
	GrammarParserT__6            = 7
	GrammarParserT__7            = 8
	GrammarParserT__8            = 9
	GrammarParserT__9            = 10
	GrammarParserT__10           = 11
	GrammarParserT__11           = 12
	GrammarParserT__12           = 13
	GrammarParserT__13           = 14
	GrammarParserT__14           = 15
	GrammarParserT__15           = 16
	GrammarParserT__16           = 17
	GrammarParserT__17           = 18
	GrammarParserT__18           = 19
	GrammarParserNumber          = 20
	GrammarParserSTRING_VALUE    = 21
	GrammarParserLogic           = 22
	GrammarParserAND             = 23
	GrammarParserOR              = 24
	GrammarParserBoolean         = 25
	GrammarParserTRUE            = 26
	GrammarParserFALSE           = 27
	GrammarParserWhitespace      = 28
	GrammarParserFields_boolean  = 29
	GrammarParserFields_string   = 30
	GrammarParserFields_number   = 31
	GrammarParserOperatorContain = 32
	GrammarParserOperatorEqual   = 33
	GrammarParserOperatorNumber  = 34
	GrammarParserFunction        = 35
	GrammarParserTerm            = 36
	GrammarParserIn              = 37
	GrammarParserNotin           = 38
	GrammarParserInContain       = 39
	GrammarParserNotinContain    = 40
	GrammarParserInIp            = 41
	GrammarParserNotinIp         = 42
	GrammarParserSeverity        = 43
	GrammarParserStatus          = 44
	GrammarParserValueIpString   = 45
	GrammarParserIp_string       = 46
	GrammarParserIp_byte         = 47
	GrammarParserIp_value        = 48
	GrammarParserArray           = 49
	GrammarParserArrayString     = 50
	GrammarParserArrayIpString   = 51
	GrammarParserLiteral         = 52
	GrammarParserNullValue       = 53
)

// GrammarParser rules.
const (
	GrammarParserRULE_prog            = 0
	GrammarParserRULE_compareNumber   = 1
	GrammarParserRULE_compareString   = 2
	GrammarParserRULE_compareDate     = 3
	GrammarParserRULE_compareBoolean  = 4
	GrammarParserRULE_compareSeverity = 5
	GrammarParserRULE_compareStatus   = 6
	GrammarParserRULE_compareCategory = 7
	GrammarParserRULE_compareFeature  = 8
	GrammarParserRULE_expression      = 9
)

// IProgContext is an interface to support dynamic dispatch.
type IProgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgContext differentiates from other interfaces.
	IsProgContext()
}

type ProgContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgContext() *ProgContext {
	var p = new(ProgContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GrammarParserRULE_prog
	return p
}

func (*ProgContext) IsProgContext() {}

func NewProgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgContext {
	var p = new(ProgContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_prog

	return p
}

func (s *ProgContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ProgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GrammarVisitor:
		return t.VisitProg(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GrammarParser) Prog() (localctx IProgContext) {
	localctx = NewProgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GrammarParserRULE_prog)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(20)
		p.expression(0)
	}

	return localctx
}

// ICompareNumberContext is an interface to support dynamic dispatch.
type ICompareNumberContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetLeft returns the left token.
	GetLeft() antlr.Token

	// GetOp returns the op token.
	GetOp() antlr.Token

	// GetRight returns the right token.
	GetRight() antlr.Token

	// SetLeft sets the left token.
	SetLeft(antlr.Token)

	// SetOp sets the op token.
	SetOp(antlr.Token)

	// SetRight sets the right token.
	SetRight(antlr.Token)

	// IsCompareNumberContext differentiates from other interfaces.
	IsCompareNumberContext()
}

type CompareNumberContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	left   antlr.Token
	op     antlr.Token
	right  antlr.Token
}

func NewEmptyCompareNumberContext() *CompareNumberContext {
	var p = new(CompareNumberContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GrammarParserRULE_compareNumber
	return p
}

func (*CompareNumberContext) IsCompareNumberContext() {}

func NewCompareNumberContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompareNumberContext {
	var p = new(CompareNumberContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_compareNumber

	return p
}

func (s *CompareNumberContext) GetParser() antlr.Parser { return s.parser }

func (s *CompareNumberContext) GetLeft() antlr.Token { return s.left }

func (s *CompareNumberContext) GetOp() antlr.Token { return s.op }

func (s *CompareNumberContext) GetRight() antlr.Token { return s.right }

func (s *CompareNumberContext) SetLeft(v antlr.Token) { s.left = v }

func (s *CompareNumberContext) SetOp(v antlr.Token) { s.op = v }

func (s *CompareNumberContext) SetRight(v antlr.Token) { s.right = v }

func (s *CompareNumberContext) Fields_number() antlr.TerminalNode {
	return s.GetToken(GrammarParserFields_number, 0)
}

func (s *CompareNumberContext) Number() antlr.TerminalNode {
	return s.GetToken(GrammarParserNumber, 0)
}

func (s *CompareNumberContext) OperatorNumber() antlr.TerminalNode {
	return s.GetToken(GrammarParserOperatorNumber, 0)
}

func (s *CompareNumberContext) OperatorEqual() antlr.TerminalNode {
	return s.GetToken(GrammarParserOperatorEqual, 0)
}

func (s *CompareNumberContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompareNumberContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompareNumberContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GrammarVisitor:
		return t.VisitCompareNumber(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GrammarParser) CompareNumber() (localctx ICompareNumberContext) {
	localctx = NewCompareNumberContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GrammarParserRULE_compareNumber)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(22)

		var _m = p.Match(GrammarParserFields_number)

		localctx.(*CompareNumberContext).left = _m
	}
	{
		p.SetState(23)

		var _lt = p.GetTokenStream().LT(1)

		localctx.(*CompareNumberContext).op = _lt

		_la = p.GetTokenStream().LA(1)

		if !(_la == GrammarParserOperatorEqual || _la == GrammarParserOperatorNumber) {
			var _ri = p.GetErrorHandler().RecoverInline(p)

			localctx.(*CompareNumberContext).op = _ri
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(24)

		var _m = p.Match(GrammarParserNumber)

		localctx.(*CompareNumberContext).right = _m
	}

	return localctx
}

// ICompareStringContext is an interface to support dynamic dispatch.
type ICompareStringContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetLeft returns the left token.
	GetLeft() antlr.Token

	// GetOp returns the op token.
	GetOp() antlr.Token

	// GetRight returns the right token.
	GetRight() antlr.Token

	// SetLeft sets the left token.
	SetLeft(antlr.Token)

	// SetOp sets the op token.
	SetOp(antlr.Token)

	// SetRight sets the right token.
	SetRight(antlr.Token)

	// IsCompareStringContext differentiates from other interfaces.
	IsCompareStringContext()
}

type CompareStringContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	left   antlr.Token
	op     antlr.Token
	right  antlr.Token
}

func NewEmptyCompareStringContext() *CompareStringContext {
	var p = new(CompareStringContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GrammarParserRULE_compareString
	return p
}

func (*CompareStringContext) IsCompareStringContext() {}

func NewCompareStringContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompareStringContext {
	var p = new(CompareStringContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_compareString

	return p
}

func (s *CompareStringContext) GetParser() antlr.Parser { return s.parser }

func (s *CompareStringContext) GetLeft() antlr.Token { return s.left }

func (s *CompareStringContext) GetOp() antlr.Token { return s.op }

func (s *CompareStringContext) GetRight() antlr.Token { return s.right }

func (s *CompareStringContext) SetLeft(v antlr.Token) { s.left = v }

func (s *CompareStringContext) SetOp(v antlr.Token) { s.op = v }

func (s *CompareStringContext) SetRight(v antlr.Token) { s.right = v }

func (s *CompareStringContext) Fields_string() antlr.TerminalNode {
	return s.GetToken(GrammarParserFields_string, 0)
}

func (s *CompareStringContext) STRING_VALUE() antlr.TerminalNode {
	return s.GetToken(GrammarParserSTRING_VALUE, 0)
}

func (s *CompareStringContext) OperatorContain() antlr.TerminalNode {
	return s.GetToken(GrammarParserOperatorContain, 0)
}

func (s *CompareStringContext) OperatorEqual() antlr.TerminalNode {
	return s.GetToken(GrammarParserOperatorEqual, 0)
}

func (s *CompareStringContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompareStringContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompareStringContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GrammarVisitor:
		return t.VisitCompareString(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GrammarParser) CompareString() (localctx ICompareStringContext) {
	localctx = NewCompareStringContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GrammarParserRULE_compareString)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(26)

		var _m = p.Match(GrammarParserFields_string)

		localctx.(*CompareStringContext).left = _m
	}
	{
		p.SetState(27)

		var _lt = p.GetTokenStream().LT(1)

		localctx.(*CompareStringContext).op = _lt

		_la = p.GetTokenStream().LA(1)

		if !(_la == GrammarParserOperatorContain || _la == GrammarParserOperatorEqual) {
			var _ri = p.GetErrorHandler().RecoverInline(p)

			localctx.(*CompareStringContext).op = _ri
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(28)

		var _m = p.Match(GrammarParserSTRING_VALUE)

		localctx.(*CompareStringContext).right = _m
	}

	return localctx
}

// ICompareDateContext is an interface to support dynamic dispatch.
type ICompareDateContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetLeft returns the left token.
	GetLeft() antlr.Token

	// GetOp returns the op token.
	GetOp() antlr.Token

	// GetRight returns the right token.
	GetRight() antlr.Token

	// SetLeft sets the left token.
	SetLeft(antlr.Token)

	// SetOp sets the op token.
	SetOp(antlr.Token)

	// SetRight sets the right token.
	SetRight(antlr.Token)

	// IsCompareDateContext differentiates from other interfaces.
	IsCompareDateContext()
}

type CompareDateContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	left   antlr.Token
	op     antlr.Token
	right  antlr.Token
}

func NewEmptyCompareDateContext() *CompareDateContext {
	var p = new(CompareDateContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GrammarParserRULE_compareDate
	return p
}

func (*CompareDateContext) IsCompareDateContext() {}

func NewCompareDateContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompareDateContext {
	var p = new(CompareDateContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_compareDate

	return p
}

func (s *CompareDateContext) GetParser() antlr.Parser { return s.parser }

func (s *CompareDateContext) GetLeft() antlr.Token { return s.left }

func (s *CompareDateContext) GetOp() antlr.Token { return s.op }

func (s *CompareDateContext) GetRight() antlr.Token { return s.right }

func (s *CompareDateContext) SetLeft(v antlr.Token) { s.left = v }

func (s *CompareDateContext) SetOp(v antlr.Token) { s.op = v }

func (s *CompareDateContext) SetRight(v antlr.Token) { s.right = v }

func (s *CompareDateContext) STRING_VALUE() antlr.TerminalNode {
	return s.GetToken(GrammarParserSTRING_VALUE, 0)
}

func (s *CompareDateContext) OperatorNumber() antlr.TerminalNode {
	return s.GetToken(GrammarParserOperatorNumber, 0)
}

func (s *CompareDateContext) OperatorEqual() antlr.TerminalNode {
	return s.GetToken(GrammarParserOperatorEqual, 0)
}

func (s *CompareDateContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompareDateContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompareDateContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GrammarVisitor:
		return t.VisitCompareDate(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GrammarParser) CompareDate() (localctx ICompareDateContext) {
	localctx = NewCompareDateContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, GrammarParserRULE_compareDate)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(30)

		var _m = p.Match(GrammarParserT__0)

		localctx.(*CompareDateContext).left = _m
	}
	{
		p.SetState(31)

		var _lt = p.GetTokenStream().LT(1)

		localctx.(*CompareDateContext).op = _lt

		_la = p.GetTokenStream().LA(1)

		if !(_la == GrammarParserOperatorEqual || _la == GrammarParserOperatorNumber) {
			var _ri = p.GetErrorHandler().RecoverInline(p)

			localctx.(*CompareDateContext).op = _ri
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(32)

		var _m = p.Match(GrammarParserSTRING_VALUE)

		localctx.(*CompareDateContext).right = _m
	}

	return localctx
}

// ICompareBooleanContext is an interface to support dynamic dispatch.
type ICompareBooleanContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetLeft returns the left token.
	GetLeft() antlr.Token

	// GetOp returns the op token.
	GetOp() antlr.Token

	// GetRight returns the right token.
	GetRight() antlr.Token

	// SetLeft sets the left token.
	SetLeft(antlr.Token)

	// SetOp sets the op token.
	SetOp(antlr.Token)

	// SetRight sets the right token.
	SetRight(antlr.Token)

	// IsCompareBooleanContext differentiates from other interfaces.
	IsCompareBooleanContext()
}

type CompareBooleanContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	left   antlr.Token
	op     antlr.Token
	right  antlr.Token
}

func NewEmptyCompareBooleanContext() *CompareBooleanContext {
	var p = new(CompareBooleanContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GrammarParserRULE_compareBoolean
	return p
}

func (*CompareBooleanContext) IsCompareBooleanContext() {}

func NewCompareBooleanContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompareBooleanContext {
	var p = new(CompareBooleanContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_compareBoolean

	return p
}

func (s *CompareBooleanContext) GetParser() antlr.Parser { return s.parser }

func (s *CompareBooleanContext) GetLeft() antlr.Token { return s.left }

func (s *CompareBooleanContext) GetOp() antlr.Token { return s.op }

func (s *CompareBooleanContext) GetRight() antlr.Token { return s.right }

func (s *CompareBooleanContext) SetLeft(v antlr.Token) { s.left = v }

func (s *CompareBooleanContext) SetOp(v antlr.Token) { s.op = v }

func (s *CompareBooleanContext) SetRight(v antlr.Token) { s.right = v }

func (s *CompareBooleanContext) Fields_boolean() antlr.TerminalNode {
	return s.GetToken(GrammarParserFields_boolean, 0)
}

func (s *CompareBooleanContext) OperatorEqual() antlr.TerminalNode {
	return s.GetToken(GrammarParserOperatorEqual, 0)
}

func (s *CompareBooleanContext) Boolean() antlr.TerminalNode {
	return s.GetToken(GrammarParserBoolean, 0)
}

func (s *CompareBooleanContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompareBooleanContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompareBooleanContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GrammarVisitor:
		return t.VisitCompareBoolean(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GrammarParser) CompareBoolean() (localctx ICompareBooleanContext) {
	localctx = NewCompareBooleanContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, GrammarParserRULE_compareBoolean)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(34)

		var _m = p.Match(GrammarParserFields_boolean)

		localctx.(*CompareBooleanContext).left = _m
	}
	{
		p.SetState(35)

		var _m = p.Match(GrammarParserOperatorEqual)

		localctx.(*CompareBooleanContext).op = _m
	}
	{
		p.SetState(36)

		var _m = p.Match(GrammarParserBoolean)

		localctx.(*CompareBooleanContext).right = _m
	}

	return localctx
}

// ICompareSeverityContext is an interface to support dynamic dispatch.
type ICompareSeverityContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetLeft returns the left token.
	GetLeft() antlr.Token

	// GetOp returns the op token.
	GetOp() antlr.Token

	// GetRight returns the right token.
	GetRight() antlr.Token

	// SetLeft sets the left token.
	SetLeft(antlr.Token)

	// SetOp sets the op token.
	SetOp(antlr.Token)

	// SetRight sets the right token.
	SetRight(antlr.Token)

	// IsCompareSeverityContext differentiates from other interfaces.
	IsCompareSeverityContext()
}

type CompareSeverityContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	left   antlr.Token
	op     antlr.Token
	right  antlr.Token
}

func NewEmptyCompareSeverityContext() *CompareSeverityContext {
	var p = new(CompareSeverityContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GrammarParserRULE_compareSeverity
	return p
}

func (*CompareSeverityContext) IsCompareSeverityContext() {}

func NewCompareSeverityContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompareSeverityContext {
	var p = new(CompareSeverityContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_compareSeverity

	return p
}

func (s *CompareSeverityContext) GetParser() antlr.Parser { return s.parser }

func (s *CompareSeverityContext) GetLeft() antlr.Token { return s.left }

func (s *CompareSeverityContext) GetOp() antlr.Token { return s.op }

func (s *CompareSeverityContext) GetRight() antlr.Token { return s.right }

func (s *CompareSeverityContext) SetLeft(v antlr.Token) { s.left = v }

func (s *CompareSeverityContext) SetOp(v antlr.Token) { s.op = v }

func (s *CompareSeverityContext) SetRight(v antlr.Token) { s.right = v }

func (s *CompareSeverityContext) OperatorEqual() antlr.TerminalNode {
	return s.GetToken(GrammarParserOperatorEqual, 0)
}

func (s *CompareSeverityContext) Severity() antlr.TerminalNode {
	return s.GetToken(GrammarParserSeverity, 0)
}

func (s *CompareSeverityContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompareSeverityContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompareSeverityContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GrammarVisitor:
		return t.VisitCompareSeverity(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GrammarParser) CompareSeverity() (localctx ICompareSeverityContext) {
	localctx = NewCompareSeverityContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, GrammarParserRULE_compareSeverity)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)

		var _m = p.Match(GrammarParserT__1)

		localctx.(*CompareSeverityContext).left = _m
	}
	{
		p.SetState(39)

		var _m = p.Match(GrammarParserOperatorEqual)

		localctx.(*CompareSeverityContext).op = _m
	}
	{
		p.SetState(40)

		var _m = p.Match(GrammarParserSeverity)

		localctx.(*CompareSeverityContext).right = _m
	}

	return localctx
}

// ICompareStatusContext is an interface to support dynamic dispatch.
type ICompareStatusContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetLeft returns the left token.
	GetLeft() antlr.Token

	// GetOp returns the op token.
	GetOp() antlr.Token

	// GetRight returns the right token.
	GetRight() antlr.Token

	// SetLeft sets the left token.
	SetLeft(antlr.Token)

	// SetOp sets the op token.
	SetOp(antlr.Token)

	// SetRight sets the right token.
	SetRight(antlr.Token)

	// IsCompareStatusContext differentiates from other interfaces.
	IsCompareStatusContext()
}

type CompareStatusContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	left   antlr.Token
	op     antlr.Token
	right  antlr.Token
}

func NewEmptyCompareStatusContext() *CompareStatusContext {
	var p = new(CompareStatusContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GrammarParserRULE_compareStatus
	return p
}

func (*CompareStatusContext) IsCompareStatusContext() {}
